docker and readme final

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 # postgres
-DB_HOST=localhost
-DB_PORT=5432
+DB_HOST=postgres
+DB_PORT=5433 //// 5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=database
+DB_NAME=dream
 DB_SSL_MODE=disable
 
-#app 
-APP_PORT=8081
+# app 
+APP_PORT=8081 //// 8080
 
-
-#jwt
+# jwt
 JWT_SECRET=suuuuper_secret_1337
