docker and readme final

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
 # postgres
 DB_HOST=postgres
-DB_PORT=5433 //// 5432
+DB_PORT=5432  # Это порт, который вы пробрасываете на хост
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=dream
 DB_SSL_MODE=disable
 
-# app 
-APP_PORT=8081 //// 8080
 
-# jwt
+#app 
+APP_PORT=8081
+
+
+#jwt
 JWT_SECRET=suuuuper_secret_1337
